<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.pub.cs.systems.eim.Colocviu1_13.Colocviu1_13MainActivity">

    <Button
        android:id="@+id/north"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/north"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/east"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/north"
        android:layout_alignParentRight="true"
        android:text="@string/east"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/north"
        android:text="@string/west"/>

    <Button
        android:id="@+id/south"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/east"
        android:text="@string/south"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="text"
        android:ems="12"
        android:saveEnabled="false"
        android:text=""
        android:layout_below="@id/south"/>

    <EditText
        android:id="@+id/tot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="text"
        android:saveEnabled="false"
        android:text=""
        android:layout_below="@id/navigate_to_secondary_activity_button"/>

    <Button
        android:id="@+id/navigate_to_secondary_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_secondary_activity"
        android:layout_below="@id/text"/>

</RelativeLayout>
